Some more formatting changes to waybar and polybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -181,7 +181,7 @@ adapter = ACAD
 ; Disable polling by setting the interval to 0.
 ;
 ; Default: 5
-poll-interval = 5
+poll-interval = 10
 
 ; see "man date" for details on how to format the time string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
@@ -278,7 +278,7 @@ type = internal/cpu
 
 ; Seconds to sleep between updates
 ; Default: 1
-interval = 0.5
+interval = 1
 
 ; Available tags:
 ;   <label> (default)
@@ -352,6 +352,7 @@ format-padding = 1
 ;   %time%
 ; Default: %date%
 label = %time% %date%
+label-padding-right = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; Module filesystem
@@ -705,7 +706,7 @@ interface = wlp0s20f3
 
 ; Seconds to sleep between updates
 ; Default: 1
-interval = 5.0
+interval = 15.0
 
 ; Test connectivity every Nth update
 ; A value of 0 disables the feature
@@ -968,7 +969,7 @@ type = internal/temperature
 
 ; Seconds to sleep between updates
 ; Default: 1
-interval = 0.5
+interval = 5
 
 ; Thermal zone to use
 ; To list all the zone types, run 
@@ -1022,9 +1023,11 @@ label-warn-foreground = ${colors.mtRed}
 ; The icon selection will range from `base-temperature` to `warn-temperature`,
 ; temperatures above `warn-temperature` will use the last icon
 ; and temperatures below `base-temperature` will use `ramp-0`
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 ramp-foreground = ${colors.fg}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -1043,7 +1046,6 @@ blacklist-0 = Scroll Lock
 format = <label-layout> <label-indicator>
 format-foreground = ${colors.fg}
 format-background = ${colors.odBlue}
-format-padding = 1
 
 ; Available tokens:
 ;   %layout%
@@ -1052,6 +1054,7 @@ format-padding = 1
 ;   %icon%
 ; Default: %layout%
 label-layout = %icon% %name%
+label-layout-padding-left = 2
 
 ; layout-icon-[0-9]+ = layout;icon
 ; Assign each layout an icon that will be available as %icon% token for the
@@ -1073,8 +1076,7 @@ indicator-icon-2 = Num Lock;;
 ;   %icon%
 ; Default: %name%
 label-indicator-on = %icon%
-label-indicator-on-padding-left = 1
-label-indicator-on-padding-right = 2
+label-indicator-on-padding-right = 1
 ; Available tokens:
 ;   %name%
 ;   %icon%
