--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -103,7 +103,7 @@
         "critical-threshold": 80,
         //"format-critical": "{icon} {temperatureC}°C",
         "format": "{icon} {temperatureC}°C",
-        "format-icons": ["", "", ""],
+        "format-icons": ["", "", "", "", ""],
         "tooltip": false
     },
     "backlight": {
@@ -132,7 +132,7 @@
     },
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "interval": 20,
+        "interval": 15,
         "format-wifi": "直 {signalStrength}% ({essid})",
         // "format-icons": ["▂___", "▂▄__","▂▄▆_","▂▄▆█"],
         "format-ethernet": " {ifname}: {ipaddr}/{cidr}",
