Change empty text for xwindow module polybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1119,8 +1119,8 @@ label-maxlen = 35
 ; Used instead of label when there is no window title
 ; Available tokens:
 ;   None
-label-empty = Empty
-label-empty-foreground = ${colors.fg}
+label-empty =
+label-empty-foreground = ${colors.odBlack}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;
