Asthetic changes to terminal and polybar/waybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -22,7 +22,7 @@ content-padding = 1
 
 [module/LtStripe]
 type = custom/text
-content = "%{T3}%{T-}"
+content = "%{T2}%{T-}"
 content-foreground = ${colors.odGutterGrey}
 content-background = ${colors.bg}
 
@@ -46,7 +46,7 @@ content-background = ${colors.odGutterGrey}
 
 [module/RtStripe]
 type = custom/text
-content = "%{T3}%{T-}"
+content = "%{T2}%{T-}"
 content-foreground = ${colors.odGreen}
 content-background = ${colors.bg}
 
@@ -70,13 +70,13 @@ content-background = ${colors.bg}
 
 [module/MidArrowLt]
 type = custom/text
-content = "%{T3}%{T-}"
+content = "%{T2}%{T-}"
 content-foreground = ${colors.odGutterGrey}
 content-background = ${colors.bg}
 ;◥ ◤◢ ◣
 [module/MidArrowRt]
 type = custom/text
-content = "%{T3}%{T-}"
+content = "%{T2}%{T-}"
 content-foreground = ${colors.odBlue}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; Module alsa
@@ -1059,7 +1059,7 @@ label-layout-padding-left = 2
 ; layout-icon-[0-9]+ = layout;icon
 ; Assign each layout an icon that will be available as %icon% token for the
 ; <label-layout> tag. The part before ';' will try to match %layout% value.
-layout-icon-default = 
+layout-icon-default = " "
 ; layout-icon-0 = ch;C
 ; layout-icon-1 = us;U
 
@@ -1076,7 +1076,7 @@ indicator-icon-2 = Num Lock;;
 ;   %icon%
 ; Default: %name%
 label-indicator-on = %icon%
-label-indicator-on-padding-right = 1
+label-indicator-on-padding-right = 2
 ; Available tokens:
 ;   %name%
 ;   %icon%
@@ -1120,7 +1120,6 @@ label-maxlen = 35
 ; Available tokens:
 ;   None
 label-empty =
-label-empty-foreground = ${colors.odBlack}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;
