--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,8 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family         Fira Code
-bold_font           Fira Code Bold
+font_family         FiraCode Nerd Font Mono
+bold_font           auto
 italic_font         Victor Mono SemiBold Italic
 bold_italic_font    Victor Mono Bold Italic
 
