--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -277,8 +277,7 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 font-0 = FantasqueSansMono Nerd Font:style=Regular:size=13;3
-font-1 = FantasqueSansMono Nerd Font:style=Regular:size=23;6
-font-2 = FantasqueSansMono Nerd Font:style=Regular:size=24;6
+font-1 = FantasqueSansMono Nerd Font Mono:style=Regular:size=23;6
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
