Change icons for headset and mute in polybar and waybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -141,8 +141,10 @@ format-volume = <ramp-volume> <label-volume>
 
 ; Available tokens:
 ;   %percentage% (default)
-label-muted = ﱝ Muted
-label-muted-foreground = #66
+label-muted = 婢
+label-muted-foreground = ${colors.odCommentGrey}
+label-muted-background = ${colors.odLightRed}
+label-muted-padding = 1
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 奄
@@ -154,8 +156,8 @@ ramp-volume-3 = 
 ; headphones are plugged in to `headphone_control_numid`
 ; If undefined, <ramp-volume> will be used for both
 ; Only applies if <ramp-volume> is used
-ramp-headphones-0 = 
-ramp-headphones-1 = 
+ramp-headphones-0 = 
+ramp-headphones-1 = 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; Module battery
@@ -887,7 +889,7 @@ format-volume-padding = 1
 ; Available tokens:
 ;   %percentage% (default)
 ;   %decibels% (unreleased)
-label-muted = ﱝ Muted
+label-muted = 婢
 label-muted-foreground = ${colors.odCommentGrey}
 label-muted-background = ${colors.odLightRed}
 label-muted-padding = 1
