--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -29,22 +29,22 @@
     },
     "mpd": {
         "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
+        "format-disconnected": " Disconnected",
+        "format-stopped": " {consumeIcon} {randomIcon} {repeatIcon} {singleIcon} Stopped",
         "unknown-tag": "N/A",
         "interval": 2,
         "consume-icons": {
             "on": ""
         },
         "random-icons": {
-            "off": "<span color=\"#f53c3c\">ﱙ</span> ",
-            "on": ""
+            "off": "",
+            "on": ""
         },
         "repeat-icons": {
-            "on": " "
+            "on": ""
         },
         "single-icons": {
-            "on": "1 "
+            "on": "1"
         },
         "state-icons": {
             "paused": "",
