--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # 24-bit color
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # Escape time
 set-option -sg escape-time 10
