Change PATH and vimrc tab configurations

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 # 24-bit color
 set -g default-terminal "tmux-256color"
+set-option -as terminal-overrides ',xterm*:Tc:smcup@:rmcup@:indn@'
 
 # Escape time
 set-option -sg escape-time 10
