--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -242,7 +242,7 @@ bell_on_tab yes
 
 #: Window layout {{{
 
-# remember_window_size  yes
+remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
 
@@ -298,15 +298,15 @@ bell_on_tab yes
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
 
-# active_border_color #00ff00
+active_border_color #98c379
 
 #: The color for the border of the active window
 
-# inactive_border_color #cccccc
+inactive_border_color #282c34
 
 #: The color for the border of inactive windows
 
-# bell_border_color #ff5a00
+bell_border_color #e06c75
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred
@@ -355,19 +355,19 @@ bell_on_tab yes
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_title_template {title}
+tab_title_template {index} {title}
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
 #: like: {index}: {title}. Useful if you have shortcuts mapped for
 #: goto_tab N.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
-# active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
-# inactive_tab_font_style normal
+active_tab_foreground   #282c34
+active_tab_background   #abb2bf
+active_tab_font_style   bold
+inactive_tab_foreground #abb2bf
+inactive_tab_background #4b5263
+inactive_tab_font_style italic
 
 #: Tab bar colors and styles
 
