--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "tmux-256color"
 set-option -as terminal-overrides ',xterm*:Tc:smcup@:rmcup@:indn@'
 
 # Escape time
-set-option -sg escape-time 10
+set-option -gs escape-time 10
 
 # Enabling mouse based events
 set -g mouse on
