--- a/.config/sway/config
+++ b/.config/sway/config
@@ -209,6 +209,9 @@ floating_minimum_size -1 x -1
 
 # Make pauvcontrol floating by default
 for_window [title="^(?i).*Volume Control.*$"] $FLOAT
+
+# Make QEMU floating by default
+for_window [title="^(?i).*QEMU.*$"] $FLOAT
  
 ####################################################################################
 # Startup manager                                                                  #
