--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,9 +6,9 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family         FiraCode Nerd Font Mono
+font_family         Fira Code
 bold_font           auto
-italic_font         Victor Mono SemiBold Italic
+italic_font         Victor Mono Medium Italic
 bold_italic_font    Victor Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
