--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -335,7 +335,7 @@ time = " %I:%M %p"
 
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = ", %b %d"
+date = "| %b %d"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
