Edit date format in polybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -331,11 +331,11 @@ type = internal/date
 interval = 60.0
 
 ; Optional time format
-time = " %I:%M %p"
+time = " %I:%M %p,"
 
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = "| %b %d"
+date = "%b %d"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
