--- a/.config/sway/config
+++ b/.config/sway/config
@@ -231,7 +231,7 @@ exec --no-startup-id swayidle -w \
 exec_always --no-startup-id $scripts_dir/launch-waybar.sh
 
 # Desktop background with output
-output eDP-1 bg ~/Pictures/keep_on_keeping_on.jpg stretch
+output eDP-1 background ~/Pictures/keep_on_keeping_on.jpg fill
 
 # Start redshift-wlroots
 exec --no-startup-id redshift-gtk
@@ -244,8 +244,7 @@ exec wl-paste --watch clipman store --max-items=30
 exec_always $scripts_dir/import-gsettings.sh \
     gtk-theme:gtk-theme-name \
     icon-theme:gtk-icon-theme-name \
-    cursor-theme:gtk-cursor-theme-name \
-    cursor-size:gtk-cursor-theme-size
+    cursor-theme:gtk-cursor-theme-name
 
 ####################################################################################
 # Colors                                                                           #
