Change battery full style polybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -235,6 +235,8 @@ label-discharging = %percentage%% (%time%)
 ;   %percentage_raw%
 label-full =  FULL
 label-full-foreground = ${colors.mtGreen}
+label-full-background = ${colors.odGutterGrey}
+label-full-padding = 1
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
