Add sway session settings in sway config

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -253,7 +253,7 @@ exec_always $scripts_dir/import-gsettings.sh \
 # systemd Integration                                                                           #
 ####################################################################################
 #
-# This is required for sway-session.target to work
+# Required for sway-session.target to work
 exec "systemctl --user import-environment; systemctl --user start sway-session.target
 
 ####################################################################################
