--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -25,4 +25,4 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\r\0\0\0/\0\0\ar\0\0\x4,\0\0\0\0\0\0\0\x14\0\0\x2\xde\0\0\x2\xe5\0\0\0\0\x2\0\0\0\a\x80\0\0\0\x11\0\0\0/\0\0\an\0\0\x4()"
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x14\0\0\a[\0\0\x4\a\0\0\0\0\0\0\0\x14\0\0\x2\xde\0\0\x2\xe5\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\x14\0\0\a[\0\0\x4\a)
