--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,6 +2,7 @@
 gtk-application-prefer-dark-theme=false
 gtk-button-images=1
 gtk-cursor-theme-name=capitaine-cursors-light
+gtk-cursor-size=36
 gtk-fallback-icon-theme=ePapirus
 gtk-font-name=Bitstream Vera Sans 12
 gtk-icon-theme-name=Papirus-Dark
@@ -9,7 +10,6 @@ gtk-menu-images=1
 gtk-primary-button-warps-slider=0
 gtk-theme-name=Adwaita-dark
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
-gtk-cursor-theme-size=0
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
