--- a/.config/sway/config
+++ b/.config/sway/config
@@ -246,8 +246,13 @@ exec wl-paste --watch clipman store --max-items=30
 # Auto-import gtk settings from $XDG_CONFIG_HOME/gtk-3.0/settings.ini
 exec_always $scripts_dir/import-gsettings.sh \
     gtk-theme:gtk-theme-name \
-    icon-theme:gtk-icon-theme-name \
-    cursor-theme:gtk-cursor-theme-name
+    icon-theme:gtk-icon-theme-name
+
+# Set cursor theme and size
+set $cursor_theme capitaine-cursors-light
+set $cursor_size 36
+
+seat seat0 xcursor_theme $cursor_theme $cursor_size
 
 ####################################################################################
 # systemd Integration                                                                           #
