--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=false
 icon_theme=Papirus-Dark
-standard_dialogs=default
+standard_dialogs=gtk3
 style=Adwaita-Dark
 
 [Fonts]
