Change cursor size sway

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-application-prefer-dark-theme=false
 gtk-button-images=1
 gtk-cursor-theme-name=capitaine-cursors-light
-gtk-cursor-size=36
+gtk-cursor-theme-size=36
 gtk-fallback-icon-theme=ePapirus
 gtk-font-name=Bitstream Vera Sans 12
 gtk-icon-theme-name=Papirus-Dark
