--- a/.octaverc
+++ b/.octaverc
@@ -5,6 +5,9 @@ crash_dumps_octave_core(0)
 sigterm_dumps_octave_core(0)
 sighup_dumps_octave_core(0)
 
+graphics_toolkit('gnuplot')
+setenv('GNUTERM', 'qt')
+
 edit mode sync
 edit home .
 EDITOR('nvim > /dev/tty 2>&1 < /dev/tty %s')
