--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -364,10 +364,10 @@ tab_title_template {index} {title}
 
 active_tab_foreground   #282c34
 active_tab_background   #abb2bf
-active_tab_font_style   bold
+active_tab_font_style   regular
 inactive_tab_foreground #abb2bf
 inactive_tab_background #4b5263
-inactive_tab_font_style italic
+inactive_tab_font_style regular
 
 #: Tab bar colors and styles
 
@@ -492,7 +492,7 @@ color15 #abb2bf
 #: content of windows, etc. Note that this even works over ssh
 #: connections.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
