--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -366,7 +366,7 @@ active_tab_foreground   #282c34
 active_tab_background   #abb2bf
 # active_tab_font_style   bold_italic
 inactive_tab_foreground #abb2bf
-inactive_tab_background #4b5263
+inactive_tab_background #3e4452
 # inactive_tab_font_style regular
 
 #: Tab bar colors and styles
