Changes to vim and terminal colorscheme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,9 @@
-# 24-bit color
+# Enable 24-bit color (truecolor) capability
 set -g default-terminal "tmux-256color"
-set-option -as terminal-overrides ',xterm*:Tc:smcup@:rmcup@:indn@'
+set-option -sa terminal-overrides ",*:RGB"
 
-# Escape time
-set-option -gs escape-time 10
+# Set escape time
+set-option -sg escape-time 10
 
-# Enabling mouse based events
+# Enable mouse-based events
 set -g mouse on
-
-# Copying and pasting
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
