--- a/.utils/configs/optimus-manager.conf
+++ b/.utils/configs/optimus-manager.conf
@@ -11,7 +11,7 @@
 #          use this option in combination with pci_power_control (see below).
 switching=none
 
-# Enable PCI power management in Intel mode.
+# Enable PCI power management in "integrated" mode.
 # This option is incompatible with acpi_call and bbswitch, so it will be ignored in those cases.
 pci_power_control=yes
 
@@ -34,20 +34,21 @@ pci_reset=no
 
 # Automatically log out the current desktop session when switching GPUs.
 # This feature is currently supported for the following DE/WM :
-# KDE Plasma, GNOME, XFCE, LXDE, Deepin, i3, Openbox, AwesomeWM, bspwm
+# GNOME, KDE Plasma, LXDE, Deepin, Xfce, i3, Openbox, AwesomeWM, bspwm and dwm
 # If this option is disabled or you use a different desktop environment,
 # GPU switching only becomes effective at the next graphical session login.
 auto_logout=yes
 
-# GPU mode to use at computer startup. Possible values: nvidia, intel, hybrid, auto
+# GPU mode to use at computer startup.
+# Possible values: nvidia, integrated, hybrid, auto, intel (deprecated, equivalent to integrated)
 # "auto" is a special mode that auto-detects if the computer is running on battery
 # and selects a proper GPU mode. See the other options below.
-startup_mode=intel
+startup_mode=integrated
 # GPU mode to select when startup_mode=auto and the computer is running on battery.
-# Possible values: nvidia, intel, hybrid
-startup_auto_battery_mode=intel
+# Possible values: nvidia, integrated, hybrid, intel (deprecated, equivalent to integrated)
+startup_auto_battery_mode=integrated
 # GPU mode to select when startup_mode=auto and the computer is running on external power.
-# Possible values: nvidia, intel, hybrid
+# Possible values: nvidia, integrated, hybrid, intel (deprecated, equivalent to integrated)
 startup_auto_extpower_mode=nvidia
 
 
@@ -76,6 +77,23 @@ DRI=3
 # Does not affect modesetting for the Intel GPU driver !
 # This option only matters if you use nouveau as the switching backend.
 modeset=yes
+
+
+[amd]
+
+# Driver to use for the AMD GPU. Possible values : modesetting, amdgpu
+# To use the amdgpu driver, you need to install the package "xf86-video-amdgpu".
+driver=modesetting
+
+# Enable TearFree option in the Xorg configuration.
+# Only applies to the amdgpu driver.
+# Possible values : yes, no
+# Leave blank for the default (no option specified)
+tearfree=
+
+# DRI version. Possible values : 2, 3
+DRI=3
+
 
 [nvidia]
 
