Change acceleration for intel gpu in optimus manager conf

--- a/.utils/configs/optimus-manager.conf
+++ b/.utils/configs/optimus-manager.conf
@@ -124,3 +124,31 @@ allow_external_gpus=no
 #   in the Nvidia control panel. Note: does not work in hybrid mode.
 # - triple_buffer : enable triple buffering.
 options=overclocking
+
+
+# Enable Runtime D3 (RTD3) Power Management in the Nvidia driver. While in hybrid mode,
+# this feature allows the Nvidia card to go into a low-power mode if it's not in use.
+#
+# IMPORTANT NOTES:
+# - The feature is still experimental
+# - It's only supported on laptops with a Turing GPU or above, and an Intel Coffee Lake CPU
+# or above (not sure about the state of support for AMD CPUs).
+# - if your Nvidia card also has an audio chip (for HDMI) or a USB port wired to it, they may not
+# function properly while in low-power mode
+#
+# For more details, see
+# https://download.nvidia.com/XFree86/Linux-x86_64/460.39/README/dynamicpowermanagement.html
+#
+# Available options:
+# - no (the default): RTD3 power management is disabled.
+# - coarse: the card only goes to low-power if no application is using it.
+# - fine: the card is also allowed to go to low-power if applications are using it but have not
+# actively submitted GPU work in some amount of time.
+dynamic_power_management=no
+
+# The Nvidia driver handles power to the video memory separately from the rest of GPU.
+# When dynamic_power_management=fine, this options controls the threshold of memory utilization
+# (in Megabytes) under which the memory is put in a low-power state.
+# Values over 200MB are ignored. Leave blank for the default (200MB).
+# Setting this value to 0 keeps the memory powered at all times.
+dynamic_power_management_memory_threshold=
