Change kitty theme colors

--- a/.config/kitty/Gruvbox Light.conf
+++ b/.config/kitty/Gruvbox Light.conf
@@ -2,48 +2,51 @@
 # This work is licensed under the terms of the MIT license.
 # For a copy, see https://opensource.org/licenses/MIT.
 
-background  #fbf1c7
-foreground  #3c3836
+background            #fbf1c7
+foreground            #3c3836
 
 cursor                #928374
+cursor_text_color     background
 
-selection_foreground  #3c3836
+selection_foreground  #fbf1c7
 selection_background  #928374
 
-color0  #fbf1c7
-color8  #282828
+# black
+color0                #3c3836
+# dark black
+color8                #282828
 
 # red
 color1                #cc241d
-# light red
+# dark red
 color9                #9d0006
 
 # green
 color2                #98971a
-# light green
+# dark green
 color10               #79740e
 
 # yellow
 color3                #d79921
-# light yellow
+# dark yellow
 color11               #b57614
 
 # blue
 color4                #458588
-# light blue
+# dark blue
 color12               #076678
 
 # magenta
 color5                #b16286
-# light magenta
+# dark magenta
 color13               #8f3f71
 
 # cyan
 color6                #689d6a
-# lighy cyan
+# dark cyan
 color14               #427b58
 
-# light gray
+# gray
 color7                #7c6f64
 # dark gray
 color15               #928374
