--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -166,7 +166,7 @@ disable_ligatures cursor
 # cursor #cccccc
 
 #: Default cursor color
-cursor_text_color background
+# cursor_text_color background
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -1509,5 +1509,5 @@ enable_audio_bell no
 
 # BEGIN_KITTY_THEME
 # Gruvbox Light
-include current-theme.conf
+include Gruvbox Light.conf
 # END_KITTY_THEME
