Change kitty color scheme

--- a/.config/kitty/Gruvbox Light.conf
+++ b/.config/kitty/Gruvbox Light.conf
@@ -11,10 +11,10 @@ cursor_text_color     background
 selection_foreground  #fbf1c7
 selection_background  #928374
 
-# black
-color0                #3c3836
-# dark black
-color8                #282828
+# white
+color0                #fbf1c7
+# dark gray
+color8                #928374
 
 # red
 color1                #cc241d
@@ -43,10 +43,10 @@ color13               #8f3f71
 
 # cyan
 color6                #689d6a
-# dark cyan
+# lighy cyan
 color14               #427b58
 
 # gray
 color7                #7c6f64
-# dark gray
-color15               #928374
+# black
+color15               #3c3836
