--- a/.config/kitty/Gruvbox Dark.conf
+++ b/.config/kitty/Gruvbox Dark.conf
@@ -13,8 +13,8 @@ selection_background  #928374
 
 # black
 color0                #282828
-# light black
-color8                #3c3836
+# dark gray
+color8                #928374
 
 # red
 color1                #cc241d
@@ -36,17 +36,17 @@ color4                #458588
 # light blue
 color12               #83a598
 
-# magenta
+# purple
 color5                #b16286
-# light magenta
+# light purple
 color13               #d3869b
 
-# cyan
+# aqua
 color6                #689d6a
-# lighy cyan
+# lighy aqua
 color14               #8ec07c
 
 # gray
 color7                #a89984
-# dark gray
-color15               #928374
+# white
+color15               #ebdbb2
