Fix ruby version in path; add to tmux.conf according to nvim checkhealth

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,5 +5,8 @@ set-option -sa terminal-overrides ",*:RGB"
 # Set escape time
 set-option -sg escape-time 10
 
+# Set focus events
+set-option -g focus-events on
+
 # Enable mouse-based events
 set -g mouse on
