Change key mode to emacs tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,5 +8,9 @@ set-option -sg escape-time 10
 # Set focus events
 set-option -g focus-events on
 
+# Set shortcut keys to emacs
+set-option -g status-keys emacs
+set-window-option -g mode-keys emacs
+
 # Enable mouse-based events
 set -g mouse on
