Change emacs configs and add multiple new packages and corresponding configs; Change kitty theme; Change vim theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1508,6 +1508,6 @@ enable_audio_bell no
 
 
 # BEGIN_KITTY_THEME
-# Gruvbox Light
-include Gruvbox Light.conf
+# One Light
+include Atom_One_Light.conf
 # END_KITTY_THEME
