--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,5 +12,10 @@ set-option -g focus-events on
 set-option -g status-keys emacs
 set-window-option -g mode-keys emacs
 
+# Reverse foreground and background colors
+set -g mode-style reverse
+set -g status-style reverse
+set -g message-style reverse
+
 # Enable mouse-based events
 set -g mouse on
