Change tmux status and message style; update kitty One themes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ set-window-option -g mode-keys emacs
 
 # Reverse foreground and background colors
 set -g mode-style reverse
-set -g status-style reverse
-set -g message-style reverse
+set -g status-style default,bold
+set -g message-style default,bold
 
 # Enable mouse-based events
 set -g mouse on
