--- a/.config/kitty/Atom_One_Dark.conf
+++ b/.config/kitty/Atom_One_Dark.conf
@@ -1,19 +1,19 @@
 background            #282c34
 foreground            #abb2bf
 
-cursor                #f0f0f0
+cursor                #d0d0d0
 cursor_text_color     background
 
 selection_background  #3e4452
 selection_foreground  #abb2bf
 
 #: black
-color0                #282c34
-color8                #282c34
+color0                #2c323c
+color8                #3e4452
 
 #: red
 color1                #e06c75
-color9                #be5046
+color9                #e06c75
 
 #: green
 color2                #98c379
@@ -21,7 +21,7 @@ color10               #98c379
 
 #: yellow
 color3                #e5c07b
-color11               #d19a66
+color11               #e5c07b
 
 #: blue
 color4                #61afef
@@ -36,5 +36,5 @@ color6                #56b6c2
 color14               #56b6c2
 
 #: white
-color7                #abb2bf
+color7                #5c6370
 color15               #abb2bf
