--- a/.config/kitty/Atom_One_Light.conf
+++ b/.config/kitty/Atom_One_Light.conf
@@ -1,7 +1,7 @@
 background            #fafafa
 foreground            #494b53
 
-cursor                #2c323c
+cursor                #3e4452
 cursor_text_color     background
 
 selection_background  #d0d0d0
@@ -9,11 +9,11 @@ selection_foreground  #494b53
 
 #: black
 color0                #494b53
-color8                #494b53
+color8                #a0a1a7
 
 #: red
 color1                #e45649
-color9                #ca1243
+color9                #e45649
 
 #: green
 color2                #50a14f
@@ -21,7 +21,7 @@ color10               #50a14f
 
 #: yellow
 color3                #986801
-color11               #c18401
+color11               #986801
 
 #: blue
 color4                #4078f2
@@ -36,5 +36,5 @@ color6                #0184bc
 color14               #0184bc
 
 #: white
-color7                #fafafa
-color15               #fafafa
+color7                #d0d0d0
+color15               #f0f0f0
