--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,8 +8,8 @@
 # title=foot
 # locked-title=no
 
-font=Fira Code:weight=regular:size=9
-# font-bold=<bold variant of regular font>
+font=Fantasque Sans Mono:weight=regular:size=10
+font-bold=Fantasque Sans Mono:weight=bold:size=10
 font-italic=Victor Mono:weight=medium:slant=italic:size=9
 font-bold-italic=Victor Mono:weight=bold:slant=italic:size=9
 # line-height=<font metrics>
@@ -23,7 +23,7 @@ font-bold-italic=Victor Mono:weight=bold:slant=italic:size=9
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
-# pad=2x2                             # optionally append 'center'
+pad=3x0                             # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -67,7 +67,7 @@ blink=yes
 # foreground=dcdccc
 # background=111111
 
-# Gruvbox - Light
+# Gruvbox Light
 
 [colors]
 # alpha=1.0
