--- a/.utils/systemd_units/hibernate-on-low-battery.service
+++ b/.utils/systemd_units/hibernate-on-low-battery.service
@@ -4,7 +4,7 @@ Documentation=man:systemd-sleep
 
 [Service]
 Type=simple
-ExecStart=/etc/systemd/system/admin-scripts/hibernate-on-low-battery.sh
+ExecStart=/usr/local/sbin/hibernate-on-low-battery
 
 [Install]
 WantedBy=multi-user.target
