Add i3 config and scripts; Cleanup

--- a/.utils/systemd_units/hibernate-on-low-battery.service
+++ b/.utils/systemd_units/hibernate-on-low-battery.service
@@ -4,7 +4,7 @@ Documentation=man:systemd-sleep
 
 [Service]
 Type=simple
-ExecStart=/usr/local/sbin/hibernate-on-low-battery
+ExecStart=/usr/local/sbin/hibernate-on-low-battery.sh
 
 [Install]
 WantedBy=multi-user.target
